Fix layout on unstakeModal on mobile device

--- a/src/style/topbar.less
+++ b/src/style/topbar.less
@@ -148,10 +148,18 @@
         .unstake-modal-text{
             margin-bottom: 12px;
             height: 65px;
+
+            @media @phone{
+                height: auto;
+            }
         }
 
         .unstake-modal-btn{
             width: 100px;
+
+            @media @phone{
+                margin-bottom: 24px;
+            }
         }
     }
 }
